@@ -22,58 +22,27 @@
  */
 package org.graalvm.compiler.hotspot;
 
-import static org.graalvm.compiler.core.common.util.ModuleAPI.addExports;
-import static org.graalvm.compiler.core.common.util.ModuleAPI.addOpens;
-import static org.graalvm.compiler.core.common.util.ModuleAPI.getModule;
-import static org.graalvm.compiler.core.common.util.Util.JAVA_SPECIFICATION_VERSION;
-
 import org.graalvm.compiler.serviceprovider.ServiceProvider;
 
 import jdk.vm.ci.hotspot.HotSpotVMEventListener;
 import jdk.vm.ci.runtime.JVMCICompilerFactory;
 import jdk.vm.ci.services.JVMCIServiceLocator;
-import jdk.vm.ci.services.Services;
 
 @ServiceProvider(JVMCIServiceLocator.class)
 public final class HotSpotGraalJVMCIServiceLocator extends JVMCIServiceLocator {
 
     /**
      * Holds the state shared between all {@link HotSpotGraalJVMCIServiceLocator} instances. This is
-     * necessary as {@link Services} can create a new instance of a service provider each time
-     * {@link Services#load(Class)} or {@link Services#loadSingle(Class, boolean)} is called.
+     * necessary as a service provider instance is created each time the service is loaded.
      */
     private static final class Shared {
         static final Shared SINGLETON = new Shared();
 
-        private boolean exportsAdded;
-
-        /**
-         * Dynamically exports and opens various internal JDK packages to the Graal module. This
-         * requires only a single {@code --add-exports=java.base/jdk.internal.module=<Graal module>}
-         * on the VM command line instead of a {@code --add-exports} instance for each JDK internal
-         * package used by Graal.
-         */
-        private void addExports() {
-            if (JAVA_SPECIFICATION_VERSION >= 9 && !exportsAdded) {
-                Object javaBaseModule = getModule.invoke(String.class);
-                Object graalModule = getModule.invoke(getClass());
-                addExports.invokeStatic(javaBaseModule, "jdk.internal.misc", graalModule);
-                addExports.invokeStatic(javaBaseModule, "jdk.internal.jimage", graalModule);
-                addExports.invokeStatic(javaBaseModule, "com.sun.crypto.provider", graalModule);
-                addOpens.invokeStatic(javaBaseModule, "jdk.internal.misc", graalModule);
-                addOpens.invokeStatic(javaBaseModule, "jdk.internal.jimage", graalModule);
-                addOpens.invokeStatic(javaBaseModule, "com.sun.crypto.provider", graalModule);
-                exportsAdded = true;
-            }
-        }
-
         <T> T getProvider(Class<T> service, HotSpotGraalJVMCIServiceLocator locator) {
             if (service == JVMCICompilerFactory.class) {
-                addExports();
                 return service.cast(new HotSpotGraalCompilerFactory(locator));
             } else if (service == HotSpotVMEventListener.class) {
                 if (graalRuntime != null) {
-                    addExports();
                     return service.cast(new HotSpotGraalVMEventListener(graalRuntime));
                 }
             }
